bxt-macros/tests/ui/non-hex-character.rs
use bxt_macros::pattern;

fn main() {
    pattern!(00 0v);
}
